# indian-law-rag-chatbot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  generate_gemini_faiss_index.py  pyproject.toml  streamlit_app.py
src/indian_law_rag_chatbot/: api.py  preprocess.py  rag_chatbot.py  test_preprocess.py  vector_store.py
